spacing fix, again

--- a/css/normal.css
+++ b/css/normal.css
@@ -66,7 +66,7 @@ background-repeat: no-repeat;
 }
 
 section > h1 {
-  margin-top: 2em;
+  margin-top: .8em;
 }
 
 #footer {
